--- a/style.css
+++ b/style.css
@@ -9,3 +9,14 @@ body{min-height: 100vh;}
 /* 
 OWN CODE 
 */
+:root {
+  --gradient: linear-gradient(hsl(6, 100%, 80%), hsl(335, 100%, 65%));
+  --pale-blue: hsl(243, 100%, 93%);
+  --grayish-blue: hsl(229, 7%, 55%);
+  --dark-blue: hsl(228, 56%, 26%);
+  --very-dark-blue: hsl(229, 57%, 11%);
+}
+body {
+  font-size: 14px;
+  font-family: 'Raleway', sans-serif;
+}
