--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 img, picture, svg, video {display: block;max-width: 100%;}
 input, textarea, button, select {font: inherit;}
 * {margin: 0;padding: 0;font: inherit;}
-body{min-height: 100vh;}
+body{min-height: 100svh;}
 
 .attribution { font-size: 11px; text-align: center; position: absolute; bottom: 1rem; left: 0; right: 0;}
 .attribution a { color: hsl(228, 45%, 44%); }
